【项目：微信基本信息展示】【模块：msgviewer】 【原因：完善微信基本信息展示逻辑】 【改动：使用最简单的方式呈现微信基本信息。。。和一个刷新按钮】 【影响面：基本信息的展示与刷新】

--- a/source/msgviewer/resources/resource.qrc
+++ b/source/msgviewer/resources/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/">
     <file>icon_svg/loading-light.svg</file>
+    <file>icon_svg/refresh.svg</file>
   </qresource>
 </RCC>
