使用自定义标题栏，调通样式，关联子仓库

--- a/source/msgviewer/resources/resource.qrc
+++ b/source/msgviewer/resources/resource.qrc
@@ -3,5 +3,6 @@
     <file>icon_svg/loading-light.svg</file>
     <file>icon_svg/refresh.svg</file>
     <file>stylesheet/decryptdlg.qss</file>
+    <file>icon_svg/wxchat.svg</file>
   </qresource>
 </RCC>
