配合junuoui实现可-自定义拖拽缩放逻辑，为最小化等三个按钮添加圆角

--- a/source/msgviewer/resources/stylesheet/decryptdlg.qss
+++ b/source/msgviewer/resources/stylesheet/decryptdlg.qss
@@ -1,6 +1,7 @@
 ﻿DecryptDialog JunuoBaseTitleBar QPushButton {
     background: transparent;
     border: none;
+    border-radius: 6px;
     width: 24px;
     height: 24px;
 }
