消息窗口，添加空白头像、消息、联系人两个单选按钮及其图标完善

--- a/source/msgviewer/resources/resource.qrc
+++ b/source/msgviewer/resources/resource.qrc
@@ -9,5 +9,6 @@
     <file>icon_svg/wechat-msg-gray.svg</file>
     <file>icon_svg/wechat-msg-green.svg</file>
     <file>stylesheet/wechatmsgdialog.qss</file>
+    <file>icon_svg/head-image-none.svg</file>
   </qresource>
 </RCC>
