中间位置的控件，布局在界面上展示，还没和数据联动，只是界面效果还行

--- a/source/msgviewer/resources/stylesheet/wechatmsgdialog.qss
+++ b/source/msgviewer/resources/stylesheet/wechatmsgdialog.qss
@@ -37,3 +37,8 @@ WechatMsgDialog VerticalNavigationBar #friendRadioButton::indicator:unchecked {
 WechatMsgDialog VerticalNavigationBar #friendRadioButton::indicator:checked {
     image: url(:/icon_svg/wechat-friend-green.svg);
 }
+
+WechatMsgDialog MiddlePage QScrollArea {
+    background-color: #f7f7f7;
+    border: none;
+}
