--- a/source/msgviewer/resources/stylesheet/wechatmsgdialog.qss
+++ b/source/msgviewer/resources/stylesheet/wechatmsgdialog.qss
@@ -38,7 +38,36 @@ WechatMsgDialog VerticalNavigationBar #friendRadioButton::indicator:checked {
     image: url(:/icon_svg/wechat-friend-green.svg);
 }
 
-WechatMsgDialog MiddlePage QScrollArea {
+WechatMsgDialog MiddlePage QScrollArea,
+WechatMsgDialog MiddlePage #msgWidget,
+WechatMsgDialog MiddlePage #friendWidget {
     background-color: #f7f7f7;
     border: none;
+}
+
+WechatMsgDialog MiddlePage QScrollBar:vertical {
+    background: #f7f7f7;
+    width: 8px;
+    margin: 0;
+}
+
+WechatMsgDialog MiddlePage QScrollBar::handle:vertical {
+    background-color: #cbc8c6;
+    border-radius: 4px;
+    min-height: 30px;
+}
+
+WechatMsgDialog MiddlePage QScrollBar::handle:vertical:hover {
+    background-color: rgba(136, 136, 136, 1);
+}
+
+WechatMsgDialog MiddlePage QScrollBar::add-page,
+WechatMsgDialog MiddlePage QScrollBar::sub-page {
+    background: #f7f7f7;
+}
+
+WechatMsgDialog MiddlePage QScrollBar::add-line:vertical, 
+WechatMsgDialog MiddlePage QScrollBar::sub-line:vertical {
+    height: 0px;
+    width: 0px;
 }
