添加会话卡片的选中态样式、信号、切换选中的逻辑

--- a/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
+++ b/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
@@ -80,10 +80,10 @@ WechatMsgDialog MiddlePage SessionOverviewCard:hover {
     background-color: #e4e4e4;
 }
 
-/* 选中态，待完善 */
-/* WechatMsgDialog MiddlePage SessionOverviewCard:selected {
+/* 选中态 */
+WechatMsgDialog MiddlePage SessionOverviewCard[selectedString='selected'] {
     background-color: #dedede;
-} */
+}
 
 WechatMsgDialog MiddlePage SessionOverviewCard #remarkLabel {
     font-family: '仿宋';
