消息会话显示，初步完成显示。目前仅支持纯文本消息。

--- a/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
+++ b/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
@@ -152,3 +152,29 @@ WechatMsgDialog ChatPage QPushButton#searchButton:pressed {
 WechatMsgDialog ChatPage QPushButton#searchButton:disabled {
     background-color: #a0cfff;
 }
+
+WechatMsgDialog ChatPage QScrollArea {
+    background-color: transparent;
+    border: none;
+}
+
+WechatMsgDialog ChatPage QScrollArea QWidget#chatContentWidget {
+    background-color: transparent;
+}
+
+WechatMsgDialog ChatPage QScrollArea QWidget#chatContentWidget QLabel#plantTextLabel_sender,
+WechatMsgDialog ChatPage QScrollArea QWidget#chatContentWidget QLabel#plantTextLabel_receiver
+{
+    color: black;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+WechatMsgDialog ChatPage QScrollArea QWidget#chatContentWidget QLabel#plantTextLabel_sender {
+    background-color: #95ec69;
+}
+
+WechatMsgDialog ChatPage QScrollArea QWidget#chatContentWidget QLabel#plantTextLabel_receiver {
+    background-color: #e4e4e4;
+}
