--- a/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
+++ b/source/msgmain/resources/stylesheet/wechatmsgdialog.qss
@@ -45,29 +45,29 @@ WechatMsgDialog MiddlePage #friendWidget {
     border: none;
 }
 
-WechatMsgDialog MiddlePage QScrollBar:vertical {
+WechatMsgDialog QScrollBar:vertical {
     background: #f7f7f7;
     width: 8px;
     margin: 0;
 }
 
-WechatMsgDialog MiddlePage QScrollBar::handle:vertical {
+WechatMsgDialog QScrollBar::handle:vertical {
     background-color: #cbc8c6;
     border-radius: 4px;
     min-height: 30px;
 }
 
-WechatMsgDialog MiddlePage QScrollBar::handle:vertical:hover {
+WechatMsgDialog QScrollBar::handle:vertical:hover {
     background-color: rgba(136, 136, 136, 1);
 }
 
-WechatMsgDialog MiddlePage QScrollBar::add-page,
-WechatMsgDialog MiddlePage QScrollBar::sub-page {
+WechatMsgDialog QScrollBar::add-page,
+WechatMsgDialog QScrollBar::sub-page {
     background: #f7f7f7;
 }
 
-WechatMsgDialog MiddlePage QScrollBar::add-line:vertical, 
-WechatMsgDialog MiddlePage QScrollBar::sub-line:vertical {
+WechatMsgDialog QScrollBar::add-line:vertical, 
+WechatMsgDialog QScrollBar::sub-line:vertical {
     height: 0px;
     width: 0px;
 }
