--- a/source/msgcore/resource/resource.qrc
+++ b/source/msgcore/resource/resource.qrc
@@ -1,6 +1,7 @@
 ﻿<RCC>
   <qresource prefix="/">
-    <file>configs/configv3.json</file>
-    <file>python/pymemutils.py</file>
+    <file>configs/offsetv3.json</file>
+    <file>configs/databasesv3.json</file>
+    <file>script/pymemutils.py</file>
   </qresource>
 </RCC>
