用格式串扫描内存去Python，改为纯C++实现

--- a/source/msgcore/resource/resource.qrc
+++ b/source/msgcore/resource/resource.qrc
@@ -1,7 +1,7 @@
-﻿<RCC>
+﻿<!DOCTYPE RCC>
+<RCC>
   <qresource prefix="/">
     <file>configs/offsetv3.json</file>
     <file>configs/databasesv3.json</file>
-    <file>script/pymemutils.py</file>
   </qresource>
 </RCC>
